{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 58,
  "lineage": "c704acbe-60c5-6913-bc45-272147e92438",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "all_worker_mgmt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:security-group/sg-0e35cccecad884037",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0e35cccecad884037",
            "ingress": [],
            "name": "all_worker_management20240814170703807800000004",
            "name_prefix": "all_worker_management",
            "owner_id": "211125551473",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_egress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "allow outbound traffic to anywhere",
            "from_port": 0,
            "id": "sgrule-3634662630",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e35cccecad884037",
            "security_group_rule_id": "sgr-0ad62caae3e658642",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "all_worker_mgmt_ingress",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.0.0/8",
              "172.16.0.0/12",
              "192.168.0.0/16"
            ],
            "description": "allow inbound traffic from eks",
            "from_port": 0,
            "id": "sgrule-2573293795",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0e35cccecad884037",
            "security_group_rule_id": "",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.all_worker_mgmt",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:security-group/sg-0df87d01bb0f5ab23",
            "description": "EKS cluster security group",
            "egress": [],
            "id": "sg-0df87d01bb0f5ab23",
            "ingress": [],
            "name": "surya-eks-ZaFDUyhI-cluster-20240814170705170300000008",
            "name_prefix": "surya-eks-ZaFDUyhI-cluster-",
            "owner_id": "211125551473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "surya-eks-ZaFDUyhI-cluster",
              "cluster": "demo"
            },
            "tags_all": {
              "Name": "surya-eks-ZaFDUyhI-cluster",
              "cluster": "demo"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:security-group/sg-06b1c834e2275ef9e",
            "description": "EKS node shared security group",
            "egress": [],
            "id": "sg-06b1c834e2275ef9e",
            "ingress": [],
            "name": "surya-eks-ZaFDUyhI-node-20240814170705168400000007",
            "name_prefix": "surya-eks-ZaFDUyhI-node-",
            "owner_id": "211125551473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "surya-eks-ZaFDUyhI-node",
              "cluster": "demo",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "owned"
            },
            "tags_all": {
              "Name": "surya-eks-ZaFDUyhI-node",
              "cluster": "demo",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "owned"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "ingress_nodes_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node groups to cluster API",
            "from_port": 443,
            "id": "sgrule-3516088334",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0df87d01bb0f5ab23",
            "security_group_rule_id": "sgr-088381a7945583ee9",
            "self": false,
            "source_security_group_id": "sg-06b1c834e2275ef9e",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.eks",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": "egress_all",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all egress",
            "from_port": 0,
            "id": "sgrule-3973713484",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-0911cae5e41625477",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_443",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node groups",
            "from_port": 443,
            "id": "sgrule-746272269",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-03ba1b739fc9e1b2f",
            "self": false,
            "source_security_group_id": "sg-0df87d01bb0f5ab23",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_4443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 4443/tcp webhook",
            "from_port": 4443,
            "id": "sgrule-3475786599",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-025331cab25239338",
            "self": false,
            "source_security_group_id": "sg-0df87d01bb0f5ab23",
            "timeouts": null,
            "to_port": 4443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_6443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 6443/tcp webhook",
            "from_port": 6443,
            "id": "sgrule-107883761",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-0abc45f5154f1122c",
            "self": false,
            "source_security_group_id": "sg-0df87d01bb0f5ab23",
            "timeouts": null,
            "to_port": 6443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_8443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 8443/tcp webhook",
            "from_port": 8443,
            "id": "sgrule-355602640",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-0c90266ea96f2c139",
            "self": false,
            "source_security_group_id": "sg-0df87d01bb0f5ab23",
            "timeouts": null,
            "to_port": 8443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_9443_webhook",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node 9443/tcp webhook",
            "from_port": 9443,
            "id": "sgrule-1905468187",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-0131f42dfefcb57c8",
            "self": false,
            "source_security_group_id": "sg-0df87d01bb0f5ab23",
            "timeouts": null,
            "to_port": 9443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_cluster_kubelet",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Cluster API to node kubelets",
            "from_port": 10250,
            "id": "sgrule-3320639762",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-02f367642b41fb68e",
            "self": false,
            "source_security_group_id": "sg-0df87d01bb0f5ab23",
            "timeouts": null,
            "to_port": 10250,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_nodes_ephemeral",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node ingress on ephemeral ports",
            "from_port": 1025,
            "id": "sgrule-4158020507",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-0e0180f22d9435a21",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 65535,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_tcp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS",
            "from_port": 53,
            "id": "sgrule-1208617914",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-07b0df5107d8fa05c",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": "ingress_self_coredns_udp",
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Node to node CoreDNS UDP",
            "from_port": 53,
            "id": "sgrule-3965036629",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "udp",
            "security_group_id": "sg-06b1c834e2275ef9e",
            "security_group_rule_id": "sgr-0144ebf38ccef42e4",
            "self": true,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 53,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.eks.aws_security_group.cluster",
            "module.eks.aws_security_group.node",
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_network_acl",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:network-acl/acl-06b5ff8164e0b61ca",
            "default_network_acl_id": "acl-06b5ff8164e0b61ca",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-06b5ff8164e0b61ca",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "::/0",
                "protocol": "-1",
                "rule_no": 101,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": null,
                "icmp_type": null,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "owner_id": "211125551473",
            "subnet_ids": [
              "subnet-00a19f1c507540112",
              "subnet-010c6bbf908e3801a",
              "subnet-0708bbed2d4f075b8",
              "subnet-09d3618989b59be78"
            ],
            "tags": {
              "Name": "surya-eks-vpc-default",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-default",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_route_table",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:route-table/rtb-0b0480003c31286f5",
            "default_route_table_id": "rtb-0b0480003c31286f5",
            "id": "rtb-0b0480003c31286f5",
            "owner_id": "211125551473",
            "propagating_vgws": null,
            "route": [],
            "tags": {
              "Name": "surya-eks-vpc-default",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-default",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "timeouts": {
              "create": "5m",
              "update": "5m"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_default_security_group",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:security-group/sg-0d8b53ebeb66a1ecf",
            "description": "default VPC security group",
            "egress": [],
            "id": "sg-0d8b53ebeb66a1ecf",
            "ingress": [],
            "name": "default",
            "name_prefix": "",
            "owner_id": "211125551473",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "surya-eks-vpc-default",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-default",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078c3e27b6cf98de9",
            "arn": "arn:aws:ec2:us-east-2:211125551473:elastic-ip/eipalloc-078c3e27b6cf98de9",
            "domain": "vpc",
            "id": "eipalloc-078c3e27b6cf98de9",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-139-185-68.us-east-2.compute.amazonaws.com",
            "public_ip": "3.139.185.68",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "surya-eks-vpc-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "vpc": true
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:internet-gateway/igw-0e59c8d9b3f6f545e",
            "id": "igw-0e59c8d9b3f6f545e",
            "owner_id": "211125551473",
            "tags": {
              "Name": "surya-eks-vpc",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-078c3e27b6cf98de9",
            "association_id": "eipassoc-0f7288e7d1b202b2b",
            "connectivity_type": "public",
            "id": "nat-0b31e339d761df2be",
            "network_interface_id": "eni-0e22399922404b45f",
            "private_ip": "10.0.4.119",
            "public_ip": "3.139.185.68",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0708bbed2d4f075b8",
            "tags": {
              "Name": "surya-eks-vpc-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            }
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-062076dfe31511faa1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0b31e339d761df2be",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-062076dfe31511faa",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0e59c8d9b3f6f545e",
            "id": "r-rtb-04713a5ea50af0d431080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-04713a5ea50af0d43",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:route-table/rtb-062076dfe31511faa",
            "id": "rtb-062076dfe31511faa",
            "owner_id": "211125551473",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "surya-eks-vpc-private",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-private",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:route-table/rtb-04713a5ea50af0d43",
            "id": "rtb-04713a5ea50af0d43",
            "owner_id": "211125551473",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "surya-eks-vpc-public",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-public",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "timeouts": null,
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09814f812769ad041",
            "route_table_id": "rtb-062076dfe31511faa",
            "subnet_id": "subnet-09d3618989b59be78"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-060a962ef52fc89e4",
            "route_table_id": "rtb-062076dfe31511faa",
            "subnet_id": "subnet-010c6bbf908e3801a"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0fcc2b582c21e0db0",
            "route_table_id": "rtb-04713a5ea50af0d43",
            "subnet_id": "subnet-0708bbed2d4f075b8"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0374df67a0a16d5a9",
            "route_table_id": "rtb-04713a5ea50af0d43",
            "subnet_id": "subnet-00a19f1c507540112"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:subnet/subnet-09d3618989b59be78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09d3618989b59be78",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125551473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "surya-eks-vpc-private-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-private-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:subnet/subnet-010c6bbf908e3801a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-010c6bbf908e3801a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125551473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "surya-eks-vpc-private-us-east-2b",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-private-us-east-2b",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:subnet/subnet-0708bbed2d4f075b8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0708bbed2d4f075b8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125551473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "surya-eks-vpc-public-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-public-us-east-2a",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:subnet/subnet-00a19f1c507540112",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-00a19f1c507540112",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "211125551473",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "surya-eks-vpc-public-us-east-2b",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "Name": "surya-eks-vpc-public-us-east-2b",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-07f1905dfd3a0787b"
          },
          "dependencies": [
            "data.aws_availability_zones.available",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this",
            "random_string.suffix"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:211125551473:vpc/vpc-07f1905dfd3a0787b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06b5ff8164e0b61ca",
            "default_route_table_id": "rtb-0b0480003c31286f5",
            "default_security_group_id": "sg-0d8b53ebeb66a1ecf",
            "dhcp_options_id": "dopt-057192691feff52c2",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-07f1905dfd3a0787b",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b0480003c31286f5",
            "owner_id": "211125551473",
            "tags": {
              "Name": "surya-eks-vpc",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            },
            "tags_all": {
              "Name": "surya-eks-vpc",
              "kubernetes.io/cluster/surya-eks-ZaFDUyhI": "shared"
            }
          },
          "dependencies": [
            "random_string.suffix"
          ],
          "create_before_destroy": true
        }
      ]
    }
  ]
}